# aleo-sdk

./: .rusty-hook.toml  Cargo.toml  Package.swift
.build/: debug.yaml  workspace-state.json
.build/x86_64-apple-macosx/: build.db
.build/x86_64-apple-macosx/debug/: description.json
.build/x86_64-apple-macosx/debug/Aleo.build/: module.modulemap
.build/x86_64-apple-macosx/debug/AleoPackageTests.product/: Objects.LinkFileList
.swiftpm/xcode/package.xcworkspace/xcuserdata/nafehshoaib.xcuserdatad/: UserInterfaceState.xcuserstate
.swiftpm/xcode/xcuserdata/nafehshoaib.xcuserdatad/xcschemes/: xcschememanagement.plist
RustXcframework.xcframework/: Info.plist
RustXcframework.xcframework/macos-arm64_x86_64/Headers/: module.modulemap
Sources/Aleo/: aleo-swift.swift
Tests/AleoTests/: AddressTests.swift  PrivateKeyCiphertextTests.swift  PrivateKeyTests.swift
swift/: Cargo.toml  build-rust.sh  build.rs
swift/src/: lib.rs  main.rs  types.rs
swift/src/account/: address.rs  mod.rs  private_key.rs  private_key_ciphertext.rs  signature.rs  view_key.rs
wasm/src/: types.rs
