[package]
name = "aleo-swift"
version = "0.4.1"
authors = ["The Humine Labs <hello@huminelabs.com"]
description = "Toolkit for exporting key Aleo functionality and cryptography to native Swift"
homepage = "https://www.huminelabs.com"
repository = "https://github.com/huminelabs/AleoSwift"
keywords = [
    "aleo",
    "cryptography",
    "blockchain",
    "decentralized",
    "zero-knowledge",
    "swift",
    "apple",
]
categories = ["cryptography::cryptocurrencies"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
swift-bridge = "0.1"
swift-bridge-build = "0.1"

[dependencies.aleo-rust]
features = ["wasm"]
workspace = true

[dependencies.rand]
version = "0.8"

[dependencies.hex]
version = "0.4.3"

[dependencies.anyhow]
version = "1.0"

[dependencies.serde_json]
version = "1.0"

[dependencies.snarkvm-utilities]
git = "https://github.com/AleoHQ/snarkVM.git"
branch = "testnet3"

[dependencies.snarkvm-wasm]
workspace = true
features = ["console", "fields", "utilities"]

[dependencies.snarkvm-synthesizer]
workspace = true
features = ["wasm", "serial"]

[dependencies.snarkvm-console]
workspace = true
features = ["wasm"]

[dependencies.snarkvm-circuit-network]
workspace = true
